Fix hover effect centering on mobile

--- a/widget-styles-23.css
+++ b/widget-styles-23.css
@@ -369,8 +369,13 @@ h4.mpp-card--subtitle:nth-child(1) {
         grid-gap: 0;
     }
     .mpp-card {
-        margin-bottom: 1em;
+        padding-top: 1em;
         padding-bottom: 1rem;
+        padding-left: 1.25rem;
+        padding-right: 1.25rem;
+        margin-left: calc(-50vw + 50%);
+        margin-right: calc(-50vw + 50%);
+        width: 100vw;
         background-color: transparent;
         box-shadow: none;
         border: none;
